home mobile finished

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,31 +3,66 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --dark-o: rgba(0, 0, 0, 0.5);
+  --glass: linear-gradient(var(--dark-o), var(--dark-o));
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  height: 100svh;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+.custom-height {
+  height: calc(100svh - 88px);
+}
+
+.custom-width {
+  width: calc(100% - 48px);
+}
+
+.embla {
+  overflow: hidden;
+}
+
+.embla__container {
+  display: flex;
+}
+
+.embla__slide {
+  min-width: 0;
+}
+
+@layer components {
+  .my-allow-overflow {
+    @apply flex-grow-0 flex-shrink-0;
+  }
+
+  .my-background {
+    @apply h-screen w-full bg-cover bg-fixed absolute;
+  }
+
+  .my-footer {
+    @apply absolute w-full flex flex-nowrap items-center z-50 bottom-0 overflow-hidden;
+  }
+
+  .my-glass {
+    @apply bg-gradient-to-r from-[var(--dark-o)] to-[var(--dark-o)];
+  }
+
+  .my-header {
+    @apply absolute z-50 w-full flex items-center justify-between px-4 py-2;
+  }
+
+  .my-rounded-button {
+    @apply absolute top-1/2 -translate-y-1/2;
   }
 }
